--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="section_extras">Extra</string>
     <string name="section_settings">Settings</string>
     <string name="section_about">About</string>
+    <string name="section_sync">Synchronize</string>
 
     <!-- Other descriptions -->
     <string name="navigation_drawer_open">Open navigation drawer</string>
