--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,10 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="snackbar_dismiss">Dismiss</string>
+
+    <string name="rooms">Rooms</string>
+    <string name="room">Room</string>
+
+    <string name="employees">Employees</string>
+    <string name="employee">Employee</string>
 </resources>
