--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,12 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="snackbar_dismiss">Dismiss</string>
 
+    <string name="structures">Structures</string>
+    <string name="structure">Structure</string>
+
+    <string name="buildings">Buildings</string>
+    <string name="building">Building</string>
+
     <string name="rooms">Rooms</string>
     <string name="room">Room</string>
 
