Added gender images

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,5 +31,5 @@
 
     <string name="first_name_label">First name:</string>
     <string name="last_name_label">First name:</string>
-    <string name="gender_label">Gender:</string>
+    <string name="gender_tooltip">Gender</string>
 </resources>
