--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,6 @@
     <string name="weekly_hours_label">Weekly hours:</string>
     <string name="start_date_label">Start date:</string>
     <string name="end_date_label">End date:</string>
+
+    <string name="empty_service">Nothing</string>
 </resources>
