Added samples for latest timestamps on the scanner fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,5 @@
 
     <string name="register_enter">Register ENTER</string>
     <string name="register_exit">Register EXIT</string>
+    <string name="latest_timestamps">Latest timestamps</string>
 </resources>
