--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,6 +43,7 @@
 
     <string name="empty_service">Nothing</string>
 
+    <string name="scan_prompt">Scan your personal QR Code</string>
     <string name="register_enter">Register ENTER</string>
     <string name="register_exit">Register EXIT</string>
     <string name="latest_timestamps">Latest timestamps</string>
