--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,12 @@
 <resources>
     <!-- Application values -->
     <string name="app_name">Hotels</string>
-    <string name="author_email">muflone@muflone.com</string>
+    <string name="app_description">Get your Hotel activities done</string>
+
+    <string name="author_name" translatable="false">Fabio Castelli (Muflone)</string>
+    <string name="author_email" translatable="false">muflone@muflone.com</string>
+    <string name="author_web" translatable="false">https://www.muflone.com/</string>
+    <string name="author_twitter" translatable="false">il_muflone</string>
 
     <!-- Navigation titles -->
     <string name="section_home">Home</string>
@@ -48,4 +53,18 @@
     <string name="register_exit">Register EXIT</string>
     <string name="latest_timestamps">Latest timestamps</string>
     <string name="transmission_status">Transmission status</string>
+
+    <!-- About section -->
+    <string name="about_contacts">Contacts</string>
+    <string name="about_license">License</string>
+    <string name="about_app_copyright">Copyright © %1$s %2$d</string>
+    <string name="about_app_license">License GPL-2+</string>
+    <string name="about_app_github" translatable="false">muflone/django-hotels-android</string>
+    <string name="about_app_playstore" translatable="false">com.muflone.android.hotels</string>
+    <string name="about_license_url" translatable="false">https://www.gnu.org/licenses/old-licenses/gpl-2.0.html</string>
+    <string name="about_credits">Credits</string>
+    <string name="about_zxing_title">ZXing Android Embedded</string>
+    <string name="about_zxing_url" translatable="false">journeyapps/zxing-android-embedded</string>
+    <string name="about_about_title">Android About Page</string>
+    <string name="about_about_url" translatable="false">medyo/android-about-page</string>
 </resources>
