--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,15 +36,15 @@
     <string name="employee">Employee</string>
     <string name="contract">Contract</string>
 
-    <string name="first_name_label">First name:</string>
-    <string name="last_name_label">Last name:</string>
-    <string name="gender_label">Gender</string>
-    <string name="company_label">Company:</string>
-    <string name="type_label">Type:</string>
-    <string name="daily_hours_label">Daily hours:</string>
-    <string name="weekly_hours_label">Weekly hours:</string>
-    <string name="start_date_label">Start date:</string>
-    <string name="end_date_label">End date:</string>
+    <string name="employee_first_name_label">First name:</string>
+    <string name="employee_last_name_label">Last name:</string>
+    <string name="employee_gender_label">Gender</string>
+    <string name="contract_company_label">Company:</string>
+    <string name="contract_type_label">Type:</string>
+    <string name="contract_daily_hours_label">Daily hours:</string>
+    <string name="contract_weekly_hours_label">Weekly hours:</string>
+    <string name="contract_start_date_label">Start date:</string>
+    <string name="contract_end_date_label">End date:</string>
 
     <string name="empty_service">Nothing</string>
 
