--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,7 +57,7 @@
     <string name="about_app_copyright">Copyright © %1$s %2$d</string>
     <string name="about_app_license">License GPL-2+</string>
     <string name="about_app_github" translatable="false">muflone/django-hotels-android</string>
-    <string name="about_app_playstore" translatable="false">com.muflone.android.hotels</string>
+    <string name="about_app_playstore" translatable="false">com.muflone.android.django_hotels</string>
     <string name="about_license_url" translatable="false">https://www.gnu.org/licenses/old-licenses/gpl-2.0.html</string>
     <string name="about_credits">Credits</string>
     <string name="about_zxing_title" translatable="false">ZXing Android Embedded</string>
