--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -19,6 +19,7 @@
     <string name="section_structures">Strutture</string>
     <string name="section_extras">Extra</string>
     <string name="section_sync">Sincronizzazione</string>
+    <string name="section_add_shortcut">Aggiungi scorciatoia</string>
     <string name="section_settings">Impostazioni</string>
     <string name="section_about">Informazioni</string>
 
@@ -60,6 +61,9 @@
     <string name="structures_select_a_service_room">Scegliere un servizio per la stanza</string>
     <string name="structures_employees_already_assigned">Impiegati già assegnati</string>
     <string name="structures_employee_set_conditions">Assegna una o più condizioni al dipendente</string>
+
+    <!-- Add shortcut section -->
+    <string name="add_shortcut_succeeded">Una nuova scorciatoia è stata aggiunga alla schermata iniziale</string>
 
     <!-- Settings section -->
     <string name="settings_tablet">Impostazioni tablet</string>
