--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -94,6 +94,9 @@
     <string name="settings_structures_buildings_closed_title">Buildings are initially closed</string>
     <string name="settings_structures_buildings_closed_summary">The buildings groups are automatically closed</string>
 
+    <string name="settings_structures_rooms_list_standard_height_title">Rooms list standard height</string>
+    <string name="settings_structures_rooms_list_standard_height_summary">Use a standard room list height for better performances</string>
+
     <!-- Sync section -->
     <string name="sync_step_started">Synchronization started</string>
     <string name="sync_step_timestamps_transmission">Timestamps transmission</string>
