Added copy to clipboard for system information details

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -116,17 +116,19 @@
     <string name="about_system_information">System information</string>
 
     <string name="about_system_information_android">Android version: %s %s</string>
-    <string name="about_system_information_sdk">SDK API Level: %s</string>
-    <string name="about_system_information_rom">ROM version: %s</string>
-    <string name="about_system_information_kernel">Kernel version: %s</string>
-    <string name="about_system_information_architecture">Architecture: %s</string>
-    <string name="about_system_information_manufacturer">Manufacturer: %s</string>
-    <string name="about_system_information_model">Model: %s</string>
-    <string name="about_system_information_product">Product: %s</string>
-    <string name="about_system_information_brand">Brand: %s</string>
-    <string name="about_system_information_device">Device: %s</string>
+    <string name="about_system_information_sdk">SDK API Level</string>
+    <string name="about_system_information_rom">ROM version</string>
+    <string name="about_system_information_kernel">Kernel version</string>
+    <string name="about_system_information_architecture">Architecture</string>
+    <string name="about_system_information_manufacturer">Manufacturer</string>
+    <string name="about_system_information_model">Model</string>
+    <string name="about_system_information_product">Product</string>
+    <string name="about_system_information_brand">Brand</string>
+    <string name="about_system_information_device">Device</string>
     <string name="about_system_information_timezone">Timezone: %s (%s)</string>
     <string name="about_system_information_resolution">Resolution: %sx%s (%s DPI)</string>
-    <string name="about_system_information_android_id">Andoid ID: %s</string>
-    <string name="about_system_information_user_agent">User Agent: %s</string>
+    <string name="about_system_information_android_id">Andoid ID</string>
+    <string name="about_system_information_user_agent">User Agent</string>
+
+    <string name="about_feedback_copied_to_clipboard">Copied data to clipboard</string>
 </resources>
