Added item to copy details to clipboard

--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -137,5 +137,6 @@
     <string name="about_system_information_android_id">Andoid ID</string>
     <string name="about_system_information_user_agent">User Agent</string>
 
+    <string name="about_feedback_copy_details">Copia dettagli</string>
     <string name="about_feedback_copied_to_clipboard">Dati copiati negli appunti</string>
 </resources>
