--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -102,6 +102,7 @@
     <string name="sync_step_timestamps_transmission">Trasmissione delle timbrature</string>
     <string name="sync_step_activities_transmission">Trasmissione delle attività</string>
     <string name="sync_step_download">Scaricamento dati</string>
+    <string name="sync_step_saving_data">Salvataggio dei dati</string>
     <string name="sync_step_completed">Sincronizzazione completata</string>
     <string name="sync_error_no_server_connection">Impossibile stabilire una connessione con il server, controllare la connessione internet</string>
     <string name="sync_error_invalid_date_time">Data o orario non validi, controllare le impostazioni di sistema</string>
