--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -102,6 +102,7 @@
     <string name="sync_step_timestamps_transmission">Timestamps transmission</string>
     <string name="sync_step_activities_transmission">Activities transmission</string>
     <string name="sync_step_download">Data download</string>
+    <string name="sync_step_saving_data">Saving data</string>
     <string name="sync_step_completed">Synchronization completed</string>
     <string name="sync_error_no_server_connection">Unable to establish connection with the server, please check your internet connection</string>
     <string name="sync_error_invalid_date_time">Invalid date or time, please check system settings</string>
