Added new InvalidServerStatus exception for invalid status server response

--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -109,6 +109,7 @@
     <string name="sync_error_no_server_connection">Impossibile stabilire una connessione con il server, controllare la connessione internet</string>
     <string name="sync_error_invalid_date_time">Data o orario non validi, controllare le impostazioni di sistema</string>
     <string name="sync_error_unable_to_download">Impossibile scaricare le informazioni dal server</string>
+    <string name="sync_error_invalid_server_status">Stato del server non valido, forse il server non è pronto</string>
     <string name="sync_error_invalid_server_response">Risposta non valida dal server, controllare la connessione internet</string>
 
     <!-- About section -->
