--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -109,6 +109,7 @@
     <string name="sync_error_no_server_connection">Unable to establish connection with the server, please check your internet connection</string>
     <string name="sync_error_invalid_date_time">Invalid date or time, please check system settings</string>
     <string name="sync_error_unable_to_download">Unable to download data from the server</string>
+    <string name="sync_error_invalid_server_status">Invalid server status, maybe the server is not ready</string>
     <string name="sync_error_invalid_server_response">Invalid response from the server, please check your internet connection</string>
 
     <!-- About section -->
