--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -112,6 +112,8 @@
     <string name="sync_error_invalid_server_status">Stato del server non valido, forse il server non è pronto</string>
     <string name="sync_error_invalid_server_response">Risposta non valida dal server, controllare la connessione internet</string>
     <string name="sync_error_retransmitted_response">L\'attività è stata già trasmessa e viene rifiutata dal server</string>
+    <string name="sync_error_retransmitted_quantity">Un\'attività è stata già trasmessa con una quantità differente:\nImpiegato: %s %s\nStruttura: %s\nEdificio: %s\nStanza: %s\nData: %s\nQuantità: %d</string>
+    <string name="sync_error_retransmitted_description">Un\'attività è stata già trasmessa con una descrizione differente\nImpiegato: %s %s\nStruttura: %s\nEdificio: %s\nStanza: %s\nData: %s\nDescription: %s</string>
 
     <!-- About section -->
     <string name="about_contacts">Contatti</string>
