--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -110,6 +110,7 @@
     <string name="sync_error_invalid_date_time">Invalid date or time, please check system settings</string>
     <string name="sync_error_unable_to_download">Unable to download data from the server</string>
     <string name="sync_error_invalid_server_status">Invalid server status, maybe the server is not ready</string>
+    <string name="sync_error_invalid_server_status_detail">Server status: %s</string>
     <string name="sync_error_invalid_server_response">Invalid response from the server, please check your internet connection</string>
     <string name="sync_error_retransmitted_response">The activity was already transmitted and it\'s refused from the server</string>
     <string name="sync_error_retransmitted_quantity">An activity was already transmitted with a different quantity\nEmployee: %s %s\nStructure: %s\nBuilding: %s\nRoom: %s\nDate: %s\nQuantity: %d</string>
